fix prev-next buttons color on mobile

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/prev-next-topic.less
@@ -160,3 +160,8 @@
     }
   }
 }
+@media (max-width: 480px) {
+  .prev-next-topic .gu-pre-next-topic_text {
+    color: var(--primary-color);
+  }
+}
